--- a/AndroidProject/app/src/main/res/layout/player_informations.xml
+++ b/AndroidProject/app/src/main/res/layout/player_informations.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:weightSum="1">
 
 
     <TableLayout style="@style/frag1TableLayout" >
@@ -10,32 +11,28 @@
             <TextView style="@style/frag1HeaderCol" android:text="Name"
                 android:inputType="none"
                 />
-
+            <TextView style="@style/frag1Col" android:text=""/>
         </TableRow>
 
         <TableRow style="@style/frag1TableRow">
-            <TextView style="@style/frag1Col" android:text="Total Number of Points"
+            <TextView style="@style/frag1Col" android:text="First Name"
                 android:inputType="none"/>
             <TextView style="@style/frag1Col" android:text=""/>
         </TableRow>
 
         <TableRow style="@style/frag1TableRow">
-            <TextView style="@style/frag1Col" android:text="2 Points Shot"
-                android:inputType="none"/>
-            <TextView style="@style/frag1Col" android:text=""/>
-        </TableRow>
-
-        <TableRow style="@style/frag1TableRow">
-            <TextView style="@style/frag1Col" android:text="3 Points Shot"
-                android:inputType="none"/>
-            <TextView style="@style/frag1Col" android:text=""/>
-        </TableRow>
-
-        <TableRow style="@style/frag1TableRow">
-            <TextView style="@style/frag1Col" android:text="Dunk"
+            <TextView style="@style/frag1Col" android:text="Number"
                 android:inputType="none"/>
             <TextView style="@style/frag1Col" android:text=""/>
         </TableRow>
 
     </TableLayout>
+
+    <Button
+        android:text="Save Informations"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/button3"
+        android:background="@color/colorAccent"
+        style="@style/Widget.AppCompat.Button" />
 </LinearLayout>
