--- a/AndroidProject/app/src/main/res/layout/activity_main.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_main.xml
@@ -24,11 +24,23 @@
             android:layout_width="match_parent"
             android:layout_height="89dp">
 
-            <ImageView
-                android:layout_width="91dp"
-                android:layout_height="66dp"
-                app:srcCompat="@drawable/plus"
-                android:id="@+id/addMatchLogo" />
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="99dp"
+                android:layout_height="match_parent"
+                android:weightSum="1">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView2" />
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="58dp"
+                    app:srcCompat="@drawable/plus"
+                    android:id="@+id/addMatchLogo" />
+            </LinearLayout>
 
             <TextView
                 android:text="TextView"
@@ -37,7 +49,7 @@
                 android:id="@+id/matchAddInfo"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:textAlignment="center" />
+                android:textAlignment="textStart" />
 
         </LinearLayout>
 
@@ -51,6 +63,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/matchTwoPic"
+                android:gravity="center"
                 android:layout_weight="0.15" />
 
             <TextView
@@ -58,6 +71,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/matchTwoTeamOne"
+                android:gravity="center"
                 android:layout_weight="0.30" />
 
             <TextView
@@ -65,6 +79,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/matchTwoTeamTwo"
+                android:gravity="center"
                 android:layout_weight="0.30" />
         </LinearLayout>
         <LinearLayout
@@ -77,6 +92,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/matchThreePic"
+                android:gravity="center"
                 android:layout_weight="0.15" />
 
             <TextView
@@ -84,6 +100,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/matchThreeTeamOne"
+                android:gravity="center"
                 android:layout_weight="0.30" />
 
             <TextView
@@ -91,6 +108,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/matchThreeTeamTwo"
+                android:gravity="center"
                 android:layout_weight="0.30" />
         </LinearLayout>
         <LinearLayout
@@ -103,6 +121,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/matchFourPic"
+                android:gravity="center"
                 android:layout_weight="0.15" />
 
             <TextView
@@ -110,6 +129,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/matchFourTeamOne"
+                android:gravity="center"
                 android:layout_weight="0.30" />
 
             <TextView
@@ -117,6 +137,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/matchFourTeamTwo"
+                android:gravity="center"
                 android:layout_weight="0.30" />
         </LinearLayout>
         <LinearLayout
@@ -129,6 +150,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/matchFivePic"
+                android:gravity="center"
                 android:layout_weight="0.16" />
 
             <TextView
@@ -136,6 +158,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/matchFiveTeamOne"
+                android:gravity="center"
                 android:layout_weight="0.30" />
 
             <TextView
@@ -143,6 +166,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/matchFiveTeamTwo"
+                android:gravity="center"
                 android:layout_weight="0.30" />
         </LinearLayout>
     </LinearLayout>
