--- a/AndroidProject/app/src/main/res/layout/team_informations.xml
+++ b/AndroidProject/app/src/main/res/layout/team_informations.xml
@@ -5,35 +5,25 @@
     android:layout_height="match_parent"
     android:weightSum="1">
 
-    <TextView
-        android:text="Name of the Team"
+    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView3"
-        android:layout_weight="0.11"
-        android:gravity="center_vertical"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="normal|bold"
-        android:background="@android:color/holo_green_light" />
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:ems="10"
+        android:id="@+id/editText5" />
 
-    <TextView
-        android:text="City"
+    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView4"
-        android:layout_weight="0.11"
-        android:gravity="center_vertical"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="normal|bold"
-        android:background="@android:color/holo_purple" />
+        android:inputType="textPersonName"
+        android:text="Location"
+        android:ems="10"
+        android:id="@+id/editText6" />
 
     <Button
-        android:text="Save"
+        android:text="Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/button2"
-        android:layout_weight="0.11"
-        android:background="@color/colorAccent" />
+        android:id="@+id/button2" />
 </LinearLayout>
