creation de match, a blinder

--- a/AndroidProject/app/src/main/res/layout/match_informationcorr.xml
+++ b/AndroidProject/app/src/main/res/layout/match_informationcorr.xml
@@ -70,38 +70,39 @@
         android:layout_width="match_parent"
         android:layout_height="57dp">
 
-        <TextView
-            android:text="Localisation"
+        <EditText
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:id="@+id/textView7" />
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:text="Location"
+            android:ems="10"
+            android:id="@+id/editText8"
+            android:textAlignment="center" />
     </LinearLayout>
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="175dp">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:text="Date"
+            android:ems="10"
+            android:id="@+id/editText7"
+            android:textAlignment="center" />
+    </LinearLayout>
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="65dp">
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:inputType="textPersonName"
-            android:text="Date"
-            android:gravity="center"
-            android:ems="10"
-            android:id="@+id/editText7" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
+    <Button
+        android:text="Save Match"
         android:layout_width="match_parent"
-        android:layout_height="72dp">
-
-        <Button
-            android:text="Save Match"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/button5" />
+        android:layout_height="wrap_content"
+        android:id="@+id/button5"
+        android:layout_weight="0.37" />
     </LinearLayout>
 </LinearLayout>
